# experimental_robotics_assignment_2

./: README.md
marker_search_interface/: CMakeLists.txt  package.xml
marker_search_interface/srv/: MarkerRequest.srv  MinIdMarker.srv
navigation_actions/: CMakeLists.txt  package.xml
navigation_actions/src/: reach_min_id_action.cpp  robot_move_node.cpp  search_marker_action.cpp
problem_load/: package.xml  setup.cfg  setup.py
problem_load/problem_load/: problem_loader.py
problem_load_lines/: problem_load_lines.txt
py_nav_ac/: package.xml  setup.cfg  setup.py
py_nav_ac/py_nav_ac/: simple_nav_ac.py
robot_exploration/: CMakeLists.txt  package.xml
robot_exploration/config/: config_camera_bot.yaml  nav2_params.yaml  plansys_params.yaml  rviz.rviz  slam_config.yaml
robot_exploration/launch/: gazebo.launch.py  gazebo_arm.launch.py  gazebo_aruco.launch.py  gazebo_assignment.launch.py  gazebo_assignment_static.launch.py  gazebo_camera_assignment.launch.py  nav_assignment_launch.py  plan_assignment_launch.py  real_robot_simple.launch.py  robot_description_launch.py  slam_assignment_launch.py
robot_exploration/planning_files/: find_lowest_marker.pddl  maze.pddl
robot_exploration/src/: basic_robot_controller.cpp  camera_controller.cpp  camera_publisher.cpp  robot_control.cpp
robot_exploration/urdf/: m2wr_arm2.gazebo  m2wr_arm2.xacro  robot4.gazebo  robot4.xacro  robot5.gazebo  robot5.xacro  robot_assignment.gazebo  robot_assignment.xacro
robot_exploration/worlds/: assignment_1.world  assignment_2.world
search_marker_server/: package.xml  setup.cfg  setup.py
search_marker_server/search_marker_server/: search_marker_server.py
targets_interface/: CMakeLists.txt  package.xml
targets_interface/msg/: TargetsYaw.msg
unused_files/: commented_pddl.txt
